[gd_scene load_steps=2 format=3 uid="uid://d0xqfoue26ref"]

[ext_resource type="Script" path="res://scenes/components/menu_paused/menu_paused.gd" id="1_qr4v5"]

[node name="MenuPaused" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qr4v5")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_left = 260.0
offset_top = 200.0
offset_right = 552.0
offset_bottom = 406.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="continue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Continue"

[node name="menuMain" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "go back menu"

[node name="exited" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "exited "

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="MarginContainer/VBoxContainer"]
energy = 0.5
max_distance = 1.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/menuMain" to="." method="_on_menu_main_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/exited" to="." method="_on_exited_pressed"]
